# atcoder-rs

./: .gitignore  Cargo.toml  README.md
src/: cmd.rs  config.rs  data.rs  main.rs  syscommand.rs
src/cmd/: new.rs  test.rs  testcase.rs
src/data/: circular_buffer.rs
tests/testcase/program_out/: grid_ac.txt  grid_wa3.txt  num_list_wa_extra.txt  num_list_wa_value_wrong.txt
